--- a/src/dexih.connections.sqlite/dexih.connections.sqlite.csproj
+++ b/src/dexih.connections.sqlite/dexih.connections.sqlite.csproj
@@ -5,7 +5,7 @@
     <AssemblyTitle>Data Experts Group - Sqlite Connection</AssemblyTitle>
     <VersionPrefix>1.0.1</VersionPrefix>
     <Authors>Gary Holland</Authors>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>dexih.connections.sqlite</AssemblyName>
     <PackageId>dexih.connections.sqlite</PackageId>
     <PackageTags>Business Intelligence;BI;ETL;Data Integration;Data Management;DbDataReader;Data Processing;Analytics;sqlserver;sqlite;sql;ftp;sftp;oracle;postgres;postgressql;mysql;azure;excel;oracle</PackageTags>
@@ -18,7 +18,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Data.Sqlite" Version="3.0.1" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="3.1.0" />
   </ItemGroup>
 
   <ItemGroup>
