--- a/src/dexih.functions.financial/dexih.functions.financial.csproj
+++ b/src/dexih.functions.financial/dexih.functions.financial.csproj
@@ -5,7 +5,7 @@
         <AssemblyTitle>Data Experts Group - Financial Functions</AssemblyTitle>
         <VersionPrefix>1.0.1</VersionPrefix>
         <Authors>Gary Holland</Authors>
-        <TargetFramework>netcoreapp2.1</TargetFramework>
+        <TargetFramework>netstandard2.0</TargetFramework>
         <AssemblyName>dexih.functions.financial</AssemblyName>
         <PackageId>dexih.functions.financial</PackageId>
         <PackageTags>Business Intelligence;BI;ETL;Data Integration;Data Management;DbDataReader;Data Processing;Analytics;sqlserver;sqlite;sql;ftp;sftp;oracle;postgres;postgressql;mysql;azure;excel;oracle</PackageTags>
