--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,8 +13,8 @@ platform: Any CPU
 init:
  - ps: $Env:LABEL = "CI" +$Env:APPVEYOR_BUILD_NUMBER.PadLeft(5, "0")
 install:
-# - ps: Start-FileDownload https://download.microsoft.com/download/0/F/D/0FD852A4-7EA1-4E2A-983A-0484AC19B92C/dotnet-sdk-2.0.0-win-x64.exe
-# - dotnet-sdk-2.0.0-win-x64.exe /quiet
+ - ps: Start-FileDownload https://download.visualstudio.microsoft.com/download/pr/f6fb21ca-cbf8-41a0-87b9-84225ae485cd/7dcd7ed94e6614098edd2f9832bceeee/dotnet-sdk-3.1.100-win-x86.exe
+ - dotnet-sdk-3.1.100-win-x86.exe /quiet
  - ps: Start-FileDownload https://download.visualstudio.microsoft.com/download/pr/12331987/917e147bbcf74b7e5e6067b50c43dbad/MicrosoftAzureStorageEmulator.msi
  - cmd /c start /wait msiexec /i MicrosoftAzureStorageEmulator.msi /quiet
 environment:
