--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,8 +13,8 @@ platform: Any CPU
 init:
  - ps: $Env:LABEL = "CI" +$Env:APPVEYOR_BUILD_NUMBER.PadLeft(5, "0")
 install:
- - ps: Start-FileDownload https://download.visualstudio.microsoft.com/download/pr/639f7cfa-84f8-48e8-b6c9-82634314e28f/8eb04e1b5f34df0c840c1bffa363c101/dotnet-sdk-3.1.100-win-x64.exe
- - dotnet-sdk-3.1.100-win-x64.exe /quiet
+#  - ps: Start-FileDownload https://download.visualstudio.microsoft.com/download/pr/639f7cfa-84f8-48e8-b6c9-82634314e28f/8eb04e1b5f34df0c840c1bffa363c101/dotnet-sdk-3.1.100-win-x64.exe
+#  - dotnet-sdk-3.1.100-win-x64.exe /quiet
  - ps: Start-FileDownload https://download.visualstudio.microsoft.com/download/pr/12331987/917e147bbcf74b7e5e6067b50c43dbad/MicrosoftAzureStorageEmulator.msi
  - cmd /c start /wait msiexec /i MicrosoftAzureStorageEmulator.msi /quiet
 environment:
