--- a/appveyor.yml
+++ b/appveyor.yml
@@ -74,7 +74,16 @@ deploy:
      - master
      - test
      - release
-     
+
+  deploy:
+  - provider: GitHub
+    release: dexih-transforms-v%APPVEYOR_BUILD_VERSION%
+    description: 'Dexih Transform Libraries - ${CONFIGURATION} release, version - ${APPVEYOR_BUILD_VERSION}'
+    auth_token:
+      secure: lEaZ/om1UTRS6Xa947/5WxZVbBW6A+ZHmPu7aXRRDqkjX1+LYTfh9xL1CueonyuC
+    artifact: /.*\.zip/
+    prerelease: false,
+    tag: %APPVEYOR_BUILD_VERSION%
 for:
 
 # The release branch publishes without the version suffix, making an official release.
@@ -112,23 +121,9 @@ for:
   build_script:
   - appveyor-retry dotnet restore -v Minimal
   - dotnet build -c %CONFIGURATION%
-  
   - dotnet publish ./src/dexih.functions.ml -c %CONFIGURATION%  -r osx-x64 -o %APPVEYOR_BUILD_FOLDER%/dexih.functions.ml-osx
   - dotnet publish ./src/dexih.functions.ml -c %CONFIGURATION%  -r win-x64 -o %APPVEYOR_BUILD_FOLDER%/dexih.functions.ml-win
   - dotnet publish ./src/dexih.functions.ml -c %CONFIGURATION%  -r linux-x64 -o %APPVEYOR_BUILD_FOLDER%/dexih.functions.ml-linux
   - 7z a ./artifacts/dexih.functions.ml_%APPVEYOR_BUILD_VERSION%_osx.zip %APPVEYOR_BUILD_FOLDER%/dexih.functions.ml-osx/*
   - 7z a ./artifacts/dexih.functions.ml_%APPVEYOR_BUILD_VERSION%_windows.zip %APPVEYOR_BUILD_FOLDER%/dexih.functions.ml-win/*
   - 7z a ./artifacts/dexih.functions.ml_%APPVEYOR_BUILD_VERSION%_linux.zip %APPVEYOR_BUILD_FOLDER%/dexih.functions.ml-linux/*
-
-  deploy:
-    - provider: GitHub
-      release: dexih-transforms-v${APPVEYOR_BUILD_VERSION}
-      description: 'Dexih Transform Libraries - ${CONFIGURATION} release, version - ${APPVEYOR_BUILD_VERSION}'
-      auth_token:
-        secure: lEaZ/om1UTRS6Xa947/5WxZVbBW6A+ZHmPu7aXRRDqkjX1+LYTfh9xL1CueonyuC
-      artifact: /.*\.zip/
-      prerelease: false,
-      tag: ${APPVEYOR_BUILD_VERSION}
-
-  
-  
