--- a/appveyor.yml
+++ b/appveyor.yml
@@ -75,16 +75,18 @@ deploy:
      - test
      - release
 
-  deploy:
-  - provider: GitHub
-    release: dexih-transforms-v%APPVEYOR_BUILD_VERSION%
-    description: 'Dexih Transform Libraries - ${CONFIGURATION} release, version - ${APPVEYOR_BUILD_VERSION}'
-    auth_token:
-      secure: lEaZ/om1UTRS6Xa947/5WxZVbBW6A+ZHmPu7aXRRDqkjX1+LYTfh9xL1CueonyuC
-    artifact: /.*\.zip/
-    prerelease: false,
-    tag: %APPVEYOR_BUILD_VERSION%
-for:
+  # deploy:
+  # - provider: GitHub
+  #   release: dexih-transforms-v%APPVEYOR_BUILD_VERSION%
+  #   description: 'Dexih Transform Libraries - ${CONFIGURATION} release, version - ${APPVEYOR_BUILD_VERSION}'
+  #   auth_token:
+  #     secure: lEaZ/om1UTRS6Xa947/5WxZVbBW6A+ZHmPu7aXRRDqkjX1+LYTfh9xL1CueonyuC
+  #   artifact: /.*\.zip/
+  #   prerelease: false,
+  #   tag: %APPVEYOR_BUILD_VERSION%
+    
+
+    for:
 
 # The release branch publishes without the version suffix, making an official release.
 -
