--- a/appveyor.yml
+++ b/appveyor.yml
@@ -52,6 +52,8 @@ artifacts:
   - path: artifacts\dexih.connections*.nupkg
   - path: artifacts\dexih.transforms*.nupkg
   - path: artifacts\dexih.functions*.nupkg
+  - path: artifacts\dexih.functions*.zip
+  - path: artifacts\dexih.connections*.zip
 services:
   - mssql2017
   - mysql
@@ -74,6 +76,15 @@ deploy:
      - master
      - test
      - release
+
+#  - provider: GitHub
+#     release: dexih-transforms-v${APPVEYOR_BUILD_VERSION}
+#     description: 'Dexih Transforms - ${CONFIGURATION} release, version - ${APPVEYOR_BUILD_VERSION}'
+#     auth_token:
+#       secure: lEaZ/om1UTRS6Xa947/5WxZVbBW6A+ZHmPu7aXRRDqkjX1+LYTfh9xL1CueonyuC
+#     artifact: /.*\.zip/
+#     prerelease: false,
+#     tag: ${APPVEYOR_BUILD_VERSION}
 
 for:
 
