--- a/appveyor.yml
+++ b/appveyor.yml
@@ -71,20 +71,21 @@ deploy:
    artifact: /.*\.nupkg/
    skip_symbols: false
    symbol_server: https://www.nuget.org/api/v2/package
+
+  - provider: GitHub
+    release: dexih-transforms-v${APPVEYOR_BUILD_VERSION}
+    description: 'Dexih Transforms - ${CONFIGURATION} release, version - ${APPVEYOR_BUILD_VERSION}'
+    auth_token:
+      secure: lEaZ/om1UTRS6Xa947/5WxZVbBW6A+ZHmPu7aXRRDqkjX1+LYTfh9xL1CueonyuC
+    artifact: /.*\.zip/
+    prerelease: false,
+    tag: ${APPVEYOR_BUILD_VERSION}
+
    on: 
     branch: 
      - master
      - test
      - release
-
-#  - provider: GitHub
-#     release: dexih-transforms-v${APPVEYOR_BUILD_VERSION}
-#     description: 'Dexih Transforms - ${CONFIGURATION} release, version - ${APPVEYOR_BUILD_VERSION}'
-#     auth_token:
-#       secure: lEaZ/om1UTRS6Xa947/5WxZVbBW6A+ZHmPu7aXRRDqkjX1+LYTfh9xL1CueonyuC
-#     artifact: /.*\.zip/
-#     prerelease: false,
-#     tag: ${APPVEYOR_BUILD_VERSION}
 
 for:
 
