--- a/appveyor.yml
+++ b/appveyor.yml
@@ -71,13 +71,24 @@ deploy:
    artifact: /.*\.nupkg/
    skip_symbols: false
    symbol_server: https://www.nuget.org/api/v2/package
-
    on: 
     branch: 
-     - master
      - test
      - release
 
+- provider: GitHub
+    release: dexih-transforms-v${APPVEYOR_BUILD_VERSION}
+    description: 'Dexih Transforms - ${CONFIGURATION} release, version - ${APPVEYOR_BUILD_VERSION}'
+    auth_token:
+      secure: lEaZ/om1UTRS6Xa947/5WxZVbBW6A+ZHmPu7aXRRDqkjX1+LYTfh9xL1CueonyuC
+    artifact: /.*\.zip/
+    prerelease: false,
+    tag: ${APPVEYOR_BUILD_VERSION}
+    on: 
+      branch: 
+       - test
+       - release
+  
 for:
 
 # The release branch publishes without the version suffix, making an official release.
@@ -109,15 +120,6 @@ for:
 
   - dotnet publish ./src/dexih.connections.oracle -c %CONFIGURATION%  -o %APPVEYOR_BUILD_FOLDER%/dexih.connections.oracle
   - 7z a ./artifacts/dexih.connections.oracle%APPVEYOR_BUILD_VERSION%.zip %APPVEYOR_BUILD_FOLDER%/dexih.connections.oracle/*
-
-  - provider: GitHub
-    release: dexih-transforms-v${APPVEYOR_BUILD_VERSION}
-    description: 'Dexih Transforms - ${CONFIGURATION} release, version - ${APPVEYOR_BUILD_VERSION}'
-    auth_token:
-      secure: lEaZ/om1UTRS6Xa947/5WxZVbBW6A+ZHmPu7aXRRDqkjX1+LYTfh9xL1CueonyuC
-    artifact: /.*\.zip/
-    prerelease: false,
-    tag: ${APPVEYOR_BUILD_VERSION}
       
 # test branch produces a nuget package with the version suffix added.
 -
