--- a/appveyor.yml
+++ b/appveyor.yml
@@ -76,9 +76,10 @@ deploy:
      - test
      - release
 
-- provider: GitHub
-    release: dexih-transforms-v${APPVEYOR_BUILD_VERSION}
-    description: 'Dexih Transforms - ${CONFIGURATION} release, version - ${APPVEYOR_BUILD_VERSION}'
+deploy:
+  - provider: GitHub
+    release: dexih-remote-v${APPVEYOR_BUILD_VERSION}
+    description: 'Dexih Remote Agent - ${CONFIGURATION} release, version - ${APPVEYOR_BUILD_VERSION}'
     auth_token:
       secure: lEaZ/om1UTRS6Xa947/5WxZVbBW6A+ZHmPu7aXRRDqkjX1+LYTfh9xL1CueonyuC
     artifact: /.*\.zip/
@@ -88,7 +89,7 @@ deploy:
       branch: 
        - test
        - release
-  
+
 for:
 
 # The release branch publishes without the version suffix, making an official release.
