--- a/src/dexih.functions/dexih.functions.csproj
+++ b/src/dexih.functions/dexih.functions.csproj
@@ -28,13 +28,14 @@
     <PackageReference Include="Dexih.Utils.CopyProperties" Version="1.0.97" />
     <PackageReference Include="Dexih.Utils.Crypto" Version="1.0.37" />
     <PackageReference Include="Dexih.Utils.DataType" Version="1.0.133" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.2" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="System.Collections.NonGeneric" Version="4.3.0">
     </PackageReference>
     <PackageReference Include="System.Data.Common" Version="4.3.0">
     </PackageReference>
     <PackageReference Include="System.Reflection.TypeExtensions" Version="4.7.0" />
-    <PackageReference Include="System.Text.Json" Version="4.7.0" />
+    <PackageReference Include="System.Text.Json" Version="4.7.1" />
     <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1">
     </PackageReference>
     <PackageReference Include="System.ValueTuple" Version="4.5.0" />
