--- a/src/dexih.transforms/dexih.transforms.csproj
+++ b/src/dexih.transforms/dexih.transforms.csproj
@@ -17,6 +17,7 @@
     <GenerateAssemblyCopyrightAttribute>false</GenerateAssemblyCopyrightAttribute>
     <LangVersion>latest</LangVersion>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <RunAnalyzersDuringLiveAnalysis>false</RunAnalyzersDuringLiveAnalysis>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\dexih.functions\dexih.functions.csproj">
