--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,12 @@ bld/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
+# rider
+.idea/
+
+# vscode
+.vscode/
+
 # MSTest test Results
 [Tt]est[Rr]esult*/
 [Bb]uild[Ll]og.*
@@ -245,5 +251,3 @@ ModelManifest.xml
 .fake/
 
 .DS_Store
-.idea/
-.vscode/
