--- a/src/dexih.transforms/dexih.transforms.csproj
+++ b/src/dexih.transforms/dexih.transforms.csproj
@@ -23,4 +23,10 @@
     <ProjectReference Include="..\dexih.functions\dexih.functions.csproj">
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="15.0.0" />
+    <PackageReference Include="Dexih.Utils.Crypto" Version="1.0.37" />
+    <PackageReference Include="Dexih.Utils.MessageHelpers" Version="1.0.21" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
 </Project>
