--- a/test/dexih.functions.tests/dexih.functions.tests.csproj
+++ b/test/dexih.functions.tests/dexih.functions.tests.csproj
@@ -23,6 +23,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\dexih.functions\dexih.functions.csproj">
     </ProjectReference>
+    <ProjectReference Include="..\dexih.transforms.tests\dexih.transforms.tests.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
