--- a/src/dexih.functions/dexih.functions.csproj
+++ b/src/dexih.functions/dexih.functions.csproj
@@ -26,8 +26,11 @@
   </ItemGroup>-->
   <ItemGroup>
     <PackageReference Include="Dexih.Utils.CopyProperties" Version="1.0.97" />
-    <PackageReference Include="Dexih.Utils.DataType" Version="1.0.141" />
+    <PackageReference Include="Dexih.Utils.DataType" Version="1.0.148" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.6" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\dexih.utils.datatype\src\Dexih.Utils.DataType\Dexih.Utils.DataType.csproj" />
   </ItemGroup>
   <PropertyGroup Label="Configuration" Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <OutputType>Library</OutputType>
