update to .net v6.0

--- a/src/dexih.functions.maths/dexih.functions.maths.csproj
+++ b/src/dexih.functions.maths/dexih.functions.maths.csproj
@@ -6,7 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="MathNet.Numerics" Version="4.15.0" />
+      <PackageReference Include="MathNet.Numerics" Version="5.0.0-alpha08" />
     </ItemGroup>
 
     <ItemGroup>
