--- a/src/dexih.functions.ml/dexih.functions.ml.csproj
+++ b/src/dexih.functions.ml/dexih.functions.ml.csproj
@@ -22,13 +22,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.9.0" />
-      <PackageReference Include="Microsoft.ML" Version="1.5.5" />
-      <PackageReference Include="Microsoft.ML.FastTree" Version="1.5.5" />
-        <PackageReference Include="Microsoft.ML.AutoML" Version="0.17.5" />
-        <PackageReference Include="Microsoft.ML.LightGbm" Version="1.5.5" />
-        <PackageReference Include="Microsoft.ML.Recommender" Version="0.17.5" />
-        <PackageReference Include="Microsoft.ML.TimeSeries" Version="1.5.5" />
+      <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.1.0-1.final" />
+      <PackageReference Include="Microsoft.ML" Version="1.7.0" />
+      <PackageReference Include="Microsoft.ML.FastTree" Version="1.7.0" />
+        <PackageReference Include="Microsoft.ML.AutoML" Version="0.19.0" />
+        <PackageReference Include="Microsoft.ML.LightGbm" Version="1.7.0" />
+        <PackageReference Include="Microsoft.ML.Recommender" Version="0.19.0" />
+        <PackageReference Include="Microsoft.ML.TimeSeries" Version="1.7.0" />
         <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
     </ItemGroup>
     <ItemGroup>
